<resources>
    <string name="app_name">팀커벨</string>


    <string name="title_activity_make_room">대화</string>


    <string name="title_activity_notice_card">공지</string>
    <string name="title_activity_notice_list">공지</string>
    <string name="title_activity_notice">공지</string>
    <string name="title_activity_make_notice">공지 작성</string>

    <string name="title_activity_invite">팀원 추가</string>
    <string name="title_activity_invite_phone">추가 하기</string>
    <string name="title_activity_invite_mail">초대 하기</string>

    <string name="title_activity_signal_list">신호등</string>
    <string name="title_activity_signal">신호등</string>
    <string name="title_activity_make_signal">신호등 작성</string>


    <string name="title_activity_vote_list">투표</string>
    <string name="title_activity_vote">투표</string>
    <string name="title_activity_make_vote">투표 작성</string>


    <string name="title_activity_role_list">역할분담</string>
    <string name="title_activity_role">역할분담</string>
    <string name="title_activity_task">역할분담</string>
    <string name="title_activity_make_role">역할분담 만들기</string>
    <string name="title_activity_edit_role">역할 수정</string>
    <string name="title_activity_make_task_response">역할 수행</string>
    <string name="title_activity_task_response">역할 응답</string>


    <string name="title_activity_chat">채팅</string>


    <string name="title_activity_invite_user">멤버 초대하기</string>

    <string name="title_activity_pick_list">Pick</string>

    <string name="title_activity_profile">프로필 관리</string>
    <string name="title_activity_setting">설정</string>
    <string name="title_activity_copy_right">CopyRight</string>
    <string name="title_activity_version_info">버전 정보</string>


    <!-- Strings related to login -->
    <string name="prompt_name">이름</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_phone">연락처</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_chk">비밀번호 확인</string>
    <string name="prompt_enter_over_twelve">12자 이하로 입력해주세요</string>


    <string name="error_enter">입력해주세요.</string>
    <string name="error_invalid_email">이메일 형태로 입력해주세요.</string>
    <string name="error_invalid_phone">이메일 형태로 입력해주세요.</string>
    <string name="error_invalid_password">8자리 이상의 비밀번호를 사용해주세요.</string>
    <string name="error_incorrect_password">비밀번호가 일치하지 않습니다.</string>
    <string name="error_field_required">필수 입력</string>
    <string name="error_invalid_length_12">12자리 이하로 입력해주세요.</string>
    <string name="error_invalid_length_20">20자리 이하로 입력해주세요.</string>
    <string name="error_field_existed">이미 존재하는 사용자 입니다.</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!-- common string -->
    <string name="action_complete">완료</string>

    <string name="txt_version">ver Beta 1.0</string>

    <string name="txt_team_list">팀 리스트</string>
    <string name="txt_reorder">순서변경하기</string>
    <string name="txt_team_add">팀 추가하기</string>
    <string name="txt_project_member">프로젝트 멤버</string>
    <string name="txt_enter_team_name">팀 이름을 입력해주세요.</string>
    <string name="txt_enter_room_name">채팅방 이름을 입력해주세요.</string>
    <string name="txt_invite_qr">QR코드로 추가하기</string>
    <string name="txt_invite_phone">연락처로 추가하기</string>
    <string name="txt_invite_email">초대 메일 보내기</string>
    <string name="txt_copy_url">링크 복사</string>
    <string name="txt_invite_url">외부 링크로 추가하기</string>
    <string name="txt_select_user">팀원 선택</string>
    <string name="txt_enter_content">내용을 입력해주세요</string>
    <string name="txt_enter_vote_title">투표 제목을 입력해주세요</string>
    <string name="txt_enter_vote_example">항목을 입력해주세요</string>
    <string name="txt_select_room">채팅방을 선택해주세요.</string>
    <string name="txt_minimum_example_is_two">"최소 답변은 2개 이상입니다"</string>
    <string name="txt_end_time">마감 시간</string>
    <string name="txt_enter_title">제목을 입력해주세요</string>
    <string name="txt_add_task">항목 추가하기</string>
    <string name="txt_my_profile">내 프로필</string>
    <string name="txt_profile">프로필</string>
    <string name="txt_unperformed">리스트</string>
    <string name="txt_sender">보냄</string>
    <string name="txt_receiver">받음</string>
    <string name="txt_name">이름</string>
    <string name="txt_bio">상태 메세지</string>
    <string name="txt_phone">연락처</string>
    <string name="txt_email">이메일</string>
    <string name="txt_chose_work">작업선택</string>
    <string name="txt_copy">복사</string>
    <string name="txt_delete">삭제</string>
    <string name="txt_edit">수정</string>
    <string name="txt_share">공유</string>
    <string name="txt_search">검색</string>
    <string name="txt_comment_count">댓글수</string>
    <string name="txt_cloud_drive_link">구글 드라이브 링크</string>
    <string name="txt_invite_member">멤버 초대하기</string>
    <string name="txt_enter_cloud_link">클라우드 url를 입력해주세요</string>
    <string name="txt_wait_response">메세지 확인 대기중입니다.</string>
    <string name="txt_readline">여기까지 읽으셨습니다</string>
    <string name="txt_message_fail">잠시 후 다시 시도해주세요.</string>
    <string name="txt_confirm_delete">정말로 삭제 하시겠습니까?</string>
    <string name="txt_confirm_leave">정말로 나가시겠습니까?</string>
    <string name="txt_default_cant_leave">기본 채팅방은 나가실 수 없습니다.</string>
    <string name="txt_deleted_item">삭제 된 글입니다.</string>
    <string name="txt_delete_success">삭제 했습니다.</string>
    <string name="txt_usergroup">참여 멤버</string>
    <string name="txt_unperformed_yet">모든 리스트 확인하신 후 \n 시작하기 버튼을 눌러주세요!</string>
    <string name="txt_setting_profile">프로필 설정</string>
    <string name="txt_setting_message">메세지 알림 설정</string>
    <string name="txt_setting_message_all">전체 메세지 알림 설정</string>
    <string name="txt_download_all">전체 다운로드</string>

    <string name="txt_check_internet">인터넷 상태를 확인해주세요.</string>
    <string name="txt_version_info">버전 정보</string>
    <string name="txt_copyright">Copyright</string>
    <string name="txt_direct_to_ceo">Direct to CEO</string>



    <string name="txt_ceo_email">ahndh0605@gmail.com</string>
    <string name="txt_copyright_content">All copyrights reserved by teamkerbell★</string>


    <string name="action_notice">공지</string>
    <string name="action_pick">PICK</string>
    <string name="action_vote">투표</string>
    <string name="action_signal">신호등</string>
    <string name="action_role">역할분담</string>
    <string name="action_show_list">리스트로 보기</string>
    <string name="action_show_favorite">즐겨찾기 관리</string>
    <string name="action_show_card">카드로 보기</string>
    <string name="action_show_finished">마감된 투표 보기</string>
    <string name="action_show_not_finished">진행중인 투표 보기</string>
    <string name="action_commit">확인</string>
    <string name="action_cancel">취소</string>
    <string name="action_close">닫기</string>
    <string name="action_start">시작하기</string>
    <string name="action_setting">설정</string>
    <string name="action_add">추가</string>
    <string name="action_send">전송</string>
    <string name="action_send_notification">푸시알림 보내기</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_register_info">계정이 없으신가요? </string>
    <string name="action_register">회원가입</string>
    <string name="action_signal_secret">비밀 신호등 설정</string>
    <string name="action_signal_particular">특정인 선택</string>
    <string name="action_upload_file">파일 첨부하기</string>
    <string name="action_enter">입력</string>
    <string name="action_edit">수정</string>
    <string name="action_gallery">사진</string>
    <string name="action_video">비디오</string>
    <string name="action_file">파일</string>
    <string name="action_leave_group">팀 나가기</string>
    <string name="action_next">다음</string>
    <string name="action_help">도움말</string>


    <string name="tab_by_choice">항목별</string>
    <string name="tab_by_member">멤버별</string>
    <string name="tab_by_not_voted">미투표</string>



    <string name="menu_all">all</string>


    <string name="disconnect">소켓 연결 해제</string>
    <string name="error_connect">소켓 연결 에러</string>
    <string name="connect">소켓 연결</string>


    <string name="descript_open_menu">메뉴 열기</string>
    <string name="descript_green">초록</string>
    <string name="descript_yellow">노랑</string>
    <string name="descript_red">빨강</string>
    <string name="descript_category">카테고리</string>
    <string name="txt_sign_out">로그아웃</string>
    <string name="txt_confirm_sign_out">로그아웃 하시겠습니까?</string>
    <string name="txt_setting_app">앱 설정</string>
    <string name="txt_setting_group">팀 설정</string>
    <string name="txt_no_file">첨부된 파일이 없습니다.</string>
    <string name="descript_dot">dot</string>
    <string name="txt_tutorial">튜토리얼</string>
    <string name="txt_tutorial_describe_1">대답없는 팀원들 때문에 고생해본 경험이 있다면?\n답변해야할 일들을 까먹어본 경험이 있다면?\n신호등을 한번 사용해보세요:)</string>
    <string name="txt_tutorial_describe_2">신호등은 답변 \'강제\' 기능으로\n 답변이 꼭 필요한 내용을 신호등으로 작성해서 보내면,</string>
    <string name="txt_tutorial_describe_3">팀원들이 본인의 상태를 초록, 노랑, 빨간 불로\n표현함과 동시에 답변 내용을 보냅니다!</string>
    <string name="txt_tutorial_describe_4">확실하게 답변을 한 상태가 초록불입니다.</string>
    <string name="txt_tutorial_describe_5">답변을 하기 어려운 상태가 노란불입니다.</string>
    <string name="txt_tutorial_describe_6">아예 확인하지 않은 상태가 빨간불입니다.</string>
    <string name="action_back">뒤로가기</string>
    <string name="action_resend">재전송</string>
    <string name="txt_verification">인증</string>
    <string name="txt_verification_success">인증 완료</string>
    <string name="action_camera">카메라</string>
</resources>
