<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart = "22dp"
    android:paddingTop="20dp"
    android:paddingEnd="22dp"
    app:layout_behavior = "@string/appbar_scrolling_view_behavior"
    tools:context=".activities.setting.VersionInfoActivity"
    tools:showIn="@layout/activity_version_info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:text="@string/txt_version_info"
        android:textSize = "16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "18dp"
        android:lineSpacingExtra = "11sp"
        android:text = "@string/app_name"
        android:textSize = "15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop = "18dp"
            android:lineSpacingExtra="11sp"
            android:text="@string/txt_version"
            android:textSize = "15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop = "18dp"
        android:lineSpacingExtra="11sp"
        android:text="@string/txt_direct_to_ceo"
        android:textSize = "15sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autoLink = "email"
        android:lineSpacingExtra="11sp"
        android:text="@string/txt_ceo_email"
        android:textSize = "15sp" />
</LinearLayout>