<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:id="@+id/layout_tutorial_4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_tutorial"
        android:textSize="14sp"
        android:textColor="@color/white"
        />
    <ImageView
        android:layout_width="32dp"
        android:layout_height="56dp"
        android:layout_marginTop="23dp"
        app:srcCompat="@drawable/ic_signal_tutorial"
        android:contentDescription="@string/txt_tutorial" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_signal"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:text="@string/txt_tutorial_describe_4"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        />
</LinearLayout>
