<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:id = "@+id/layout_tutorial_1"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:gravity = "center"
    android:orientation = "vertical">

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/txt_tutorial"
        android:textColor = "@color/white"
        android:textSize = "14sp" />

    <ImageView
        android:layout_width = "32dp"
        android:layout_height = "56dp"
        android:layout_marginTop = "23dp"
        android:contentDescription = "@string/txt_tutorial"
        app:srcCompat = "@drawable/ic_signal_tutorial" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "20dp"
        android:text = "@string/action_signal"
        android:textColor = "@color/white"
        android:textSize = "25sp" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "10dp"
        android:gravity = "center_horizontal"
        android:text = "@string/txt_tutorial_describe_1"
        android:textColor = "@color/white"
        android:textSize = "14sp" />
</LinearLayout>