<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding = "30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.teamfairy.sopt.teamkerbell.activities.group.invite.InvitePhoneActivity"
    tools:showIn="@layout/activity_invite_phone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom = "25dp"
        android:text="@string/txt_invite_phone"
        android:textSize = "18sp"
        android:textStyle = "bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme = "@style/EditText_mainColor">

        <AutoCompleteTextView
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:imeOptions = "actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "22dp"
        android:theme = "@style/EditText_mainColor">

        <AutoCompleteTextView
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits = "0123456789-"
            android:hint="@string/prompt_phone"
            android:imeOptions = "actionNext"
            android:inputType="phone"
            android:maxLength = "13"
            android:maxLines="1"
            android:singleLine = "true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_gravity = "end"
        android:layout_marginTop="24dp"
        android:background = "@drawable/shape_round_btn_gray"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text = "@string/action_add" />
</LinearLayout>
