<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_card_light_grey"
    android:padding="20dp"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/dialog_tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_confirm_delete"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:theme="@style/FlatButton"
            android:id="@+id/btn_confirm_yes"
            android:background="@drawable/shape_round_btn"
            android:text="@string/action_commit"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_confirm_no"
            android:background="@drawable/shape_round_default"
            android:theme="@style/FlatButton"
            android:text="@string/action_cancel"
            android:textSize="20sp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

    </LinearLayout>





</LinearLayout>